Fix copy/paste typo 03.document-prediction.ipynb

--- a/demos/rag-demos/question-answering/03.document-prediction.ipynb
+++ b/demos/rag-demos/question-answering/03.document-prediction.ipynb
@@ -78,7 +78,7 @@
     "heading = widgets.HTML(\"<h2>Credentials</h2>\")\n",
     "display(heading)\n",
     "\n",
-    "domain_input = widgets.Text(description='Username:', placeholder=\"i001ua.tryezmeral.com\")\n",
+    "domain_input = widgets.Text(description='Domain:', placeholder=\"i001ua.tryezmeral.com\")\n",
     "username_input = widgets.Text(description='Username:')\n",
     "password_input = widgets.Password(description='Password:')\n",
     "submit_button = widgets.Button(description='Submit')\n",
