minor notebook revisions

--- a/demos/smart-retail/00.introduction.ipynb
+++ b/demos/smart-retail/00.introduction.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "To make this experience a reality for customers, we'll first need to understand how they shop. You will learn to leverage **Apache Spark** and its powerful distributed processing capabilities to analyze sales information and uncover insights of sales data across stores from three major European countries. You will then learn how to build, store and manage datasets from the sales data you pulled and serve them to other applications using **EzPresto**, which will allow you to build a dashboard using **Apache Superset** to display these datasets in a professional and modular manner. \n",
     "\n",
-    "You will then learn how to train an object recognition model using **Tensorflow** and learn to optimize a scalable and collaborative machine learning workflow using **MLflow**. From there, you will learn to serve your newly-created model at scale - hundreds of self-serve checkouts in multiple stores across several countries - using **Kserve** on **Kubeflow**. We will then deploy the application that every self-serve checkout can run at scale that inference this model and deliver a smart retail experience for thousands of customers!\n",
+    "You will then learn how to train an object recognition model using **Tensorflow** and learn to optimize a scalable and collaborative machine learning workflow using **MLflow**. From there, you will learn to serve your newly-created model at scale - hundreds of self-serve checkouts in multiple stores across several countries - using **KServe** on **Kubeflow**. We will then deploy the application that every self-serve checkout can run at scale that inference this model and deliver a smart retail experience for thousands of customers!\n",
     "\n",
     "All of these applications will be running natively within a clean installation of **HPE Ezmeral Unified Analytics** - no further setup required to get these best-in-class open-source tools to connect and leverage one another.\n",
     "\n",
@@ -71,7 +71,7 @@
     "\n",
     "<a href=\"./05.working_in_mlflow.ipynb\" style=\"color: black\"><b style=\"color: #01a982;\">Exercise 5:</b> Tracking, Registering and Inferencing Models in MLflow</a>\n",
     "\n",
-    "<a href=\"./06.serve_model_kserve.ipynb\" style=\"color: black\"><b style=\"color: #01a982;\">Exercise 6:</b> Serving your model with Kserve</a>\n",
+    "<a href=\"./06.serve_model_KServe.ipynb\" style=\"color: black\"><b style=\"color: #01a982;\">Exercise 6:</b> Serving your model with KServe</a>\n",
     "\n",
     "<a href=\"./07.deploying_retail_application.ipynb\" style=\"color: black\"><b style=\"color: #01a982;\">Exercise 7:</b> Deploying Custom Applications on HPE Ezmeral Unified Analytics</a>\n"
    ]
@@ -97,7 +97,7 @@
     "\n",
     "This technical demonstartion is an adaptation from the *Retail Demo* developed by Dirk Derichsweiler, Isabelle Steinhauser and Vincent Charbonnier of the HPE Ezmeral DACH Solutions Achitect team. Their collective assistance over various timezones in bringing this adaptation of their work to life is beyond appreciated. \n",
     "\n",
-    "Special thanks to Simhan Naveenam and Dimitrios Poulopoulos for their troubleshooting and guidance over several sessions and learning an incredible amount from each one. \n"
+    "Special thanks to Simhan Naveenam and Dimitrios Poulopoulos for their troubleshooting and guidance.\n"
    ]
   },
   {
