--- a/demos/smart-retail/03.visualizing_data_superset.ipynb
+++ b/demos/smart-retail/03.visualizing_data_superset.ipynb
@@ -115,7 +115,7 @@
    },
    "source": [
     "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Important</b> Make sure you finished Exercise 2 successfully before and have the name of your cached asset at hand\n",
+    "<b>Important</b> Make sure you finished Exercise 2 successfully before and have the name of your cached asset at hand.\n",
     "</div>"
    ]
   },
@@ -154,7 +154,7 @@
     "tags": []
    },
    "source": [
-    "image"
+    "<img src=\"./images/exercise3/createdataset.png\" alt=\"Drawing\" style=\"width: 90%;\"/>"
    ]
   },
   {
@@ -411,7 +411,7 @@
     "\n",
     "In this exercise, you entered the world of data analytics - working with data to tell a visual story. You learned how to navigate Apache Superset, create and manage Charts, and make custom Dashboards fit for a C-suite presentation.\n",
     "\n",
-    "In the next exercise, we will take a slightly different route and delve into using machine learning to create a produce detection model that will form the basis of our final end product - a cashierless, barcodeless checkout experience! "
+    "In the next exercise, we will take a slightly different route and delve into using **machine learning** to create a produce detection model that will form the basis of our final end product - a cashierless, barcodeless checkout experience! "
    ]
   },
   {
