--- a/demos/smart-retail/04.model_training.ipynb
+++ b/demos/smart-retail/04.model_training.ipynb
@@ -17,7 +17,7 @@
     "tags": []
    },
    "source": [
-    "# **Exercise 4:** Building a Image Classification Model with Tensorflow and MLflow\n",
+    "# **Exercise 4:** Building an Image Classification Model with Tensorflow and MLflow\n",
     "\n",
     "You presented your Superset Dashboard to your retail company executives. They like the numbers and are raving about the insights you have gathered and visually presented in such an clean, intuitive manner.\n",
     "\n",
@@ -182,12 +182,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "145ffd3d-409d-4e3b-9935-23fb795b3f37",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/mnt/shared/end2end-main-exercises/exercises'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%pwd"
    ]
@@ -204,14 +215,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c129f625-a3e9-4b4b-a95e-ee05fbe6ba0e",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/datasets/quick/\n"
+     ]
+    }
+   ],
    "source": [
-    "root_path = '/mnt/shared/end2end-main-exercises/exercises' #Insert the output of the %pwd command here\n",
+    "root_path = '' #Insert the output of the %pwd command here\n",
     "\n",
     "\n",
     "#For faster training times (<5 minutes) rather than the whole dataset. \n",
@@ -528,7 +547,7 @@
     "tags": []
    },
    "source": [
-    "To create a MobileNetV2 model, we'll first declare the **image data generators** specifically written for MobileNetV2 for each of the training, testing and validation datasets. The `ImageDataGenerator` class efficiently prepares and delivers batches of images during training. It utilizes a custom preprocessing function (`tf.keras.applications.mobilenet_v2.preprocess_input`) that prepares each image to MobileNetV2's requirements, typically including scaling pixel values and subtracting specific means from each color channel. This streamlined approach ensures images are formatted correctly for optimal performance within the MobileNetV2 architecture."
+    "To train a MobileNetV2 model, we'll first declare the **image data generators** specifically written for MobileNetV2 for each of the training, testing and validation datasets. The `ImageDataGenerator` class efficiently prepares and delivers batches of images during training. It utilizes a custom preprocessing function (`tf.keras.applications.mobilenet_v2.preprocess_input`) that prepares each image to MobileNetV2's requirements, typically including scaling pixel values and subtracting specific means from each color channel. This streamlined approach ensures images are formatted correctly for optimal performance within the MobileNetV2 architecture."
    ]
   },
   {
