--- a/Data-Science/Ray/Ray-CPU/Matrix_Multiplication/ray-matrix_multiplication-executor.ipynb
+++ b/Data-Science/Ray/Ray-CPU/Matrix_Multiplication/ray-matrix_multiplication-executor.ipynb
@@ -12,6 +12,7 @@
     "import ray\n",
     "from ray.job_submission import JobSubmissionClient\n",
     "import time\n",
+    "import subprocess\n",
     "\n",
     "# Ray cluster information\n",
     "ray_head_ip = \"kuberay-head-svc.kuberay.svc.cluster.local\"\n",
