Comment env values of proxies by default and update comments

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify proxy value if it's should be configured on the cluster\n",
+    "# Specify proxy value if applicable\n",
     "%env https_proxy=http://<proxy_host>:<port>\n",
     "# Install required packages (Kubeflow Pipelines and Katib SDK).\n",
     "import sys\n",
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify the name of the mounted directory\n",
+    "# Specify the name of the user mounted directory\n",
     "user_mounted_dir_name = \"user\""
    ]
   },
@@ -138,31 +138,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Uncomment & update the value of the proxies below according to your system settings if applicable. \n",
+    "\n",
     "env = [\n",
-    "    {\n",
-    "        \"name\": \"HTTP_PROXY\",\n",
-    "        \"value\": \"http://<proxy_host>:<port>\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"HTTPS_PROXY\",\n",
-    "        \"value\": \"http://<proxy_host>:<port>\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"http_proxy\",\n",
-    "        \"value\": \"http://<proxy_host>:<port>\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"https_proxy\",\n",
-    "        \"value\": \"http://<proxy_host>:<port>\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"no_proxy\",\n",
-    "        \"value\": \"<no_proxy_IPs_list>\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"NO_PROXY\",\n",
-    "        \"value\": \"<no_proxy_IPs_list>\"\n",
-    "    }\n",
+    "    # {\n",
+    "    #     \"name\": \"HTTP_PROXY\",\n",
+    "    #     \"value\": \"http://<proxy_host>:<port>\"\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     \"name\": \"HTTPS_PROXY\",\n",
+    "    #     \"value\": \"http://<proxy_host>:<port>\"\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     \"name\": \"http_proxy\",\n",
+    "    #     \"value\": \"http://<proxy_host>:<port>\"\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     \"name\": \"https_proxy\",\n",
+    "    #     \"value\": \"http://<proxy_host>:<port>\"\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     \"name\": \"no_proxy\",\n",
+    "    #     \"value\": \"<no_proxy_IPs_list>\"\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     \"name\": \"NO_PROXY\",\n",
+    "    #     \"value\": \"<no_proxy_IPs_list>\"\n",
+    "    # }\n",
     "]"
    ]
   },
