Comment out the proxy value present before the pip installations.
This can be uncommented and given proper proxy value by the user if needed.

Co-authored-by: Arkadii Kravchuk <64816141+akravacyber@users.noreply.github.com>

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -37,8 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify proxy value if applicable\n",
-    "%env https_proxy=http://<proxy_host>:<port>\n",
+    "# Uncomment & specify proxy value if applicable\n",
+    "# %env https_proxy=http://<proxy_host>:<port>\n",
     "# Install required packages (Kubeflow Pipelines and Katib SDK).\n",
     "import sys\n",
     "!{sys.executable} -m pip install \"pyarrow>7.0.0\" \"kfp>=1.8.0,<=1.8.22\" kubeflow-katib==0.16.0"
