--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -19,7 +19,7 @@
     "# ######################################### E2E Demo example precondition ##############################################\n",
     "\n",
     "# # You need to generate secret to have ability read datasource files from S3 bucket by Spark application (Airflow DAG)\n",
-    "# # Copy template \"object_store_secret.yaml.tpl\" from shared/ezua-tutorials/Data-Analytics/Spark directory to e.g. user folder\n",
+    "# # Copy template \"object_store_secret.yaml.tpl\" from shared/ezua-tutorials/current-release/Data-Analytics/Spark directory to e.g. user folder\n",
     "\n",
     "import kfp\n",
     "\n",
@@ -37,8 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify proxy value if it's should be configured on the cluster\n",
-    "%env https_proxy=http://<proxy_host>:<port>\n",
+    "# Uncomment & specify proxy value if applicable\n",
+    "# %env https_proxy=http://<proxy_host>:<port>\n",
     "# Install required packages (Kubeflow Pipelines and Katib SDK).\n",
     "import sys\n",
     "!{sys.executable} -m pip install \"pyarrow>7.0.0\" \"kfp>=1.8.0,<=1.8.22\" kubeflow-katib==0.16.0"
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify the name of the mounted directory\n",
+    "# Specify the name of the user mounted directory\n",
     "user_mounted_dir_name = \"user\""
    ]
   },
@@ -138,31 +138,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Uncomment & update the value of the proxies below according to your system settings if applicable. \n",
+    "\n",
     "env = [\n",
-    "    {\n",
-    "        \"name\": \"HTTP_PROXY\",\n",
-    "        \"value\": \"http://<proxy_host>:<port>\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"HTTPS_PROXY\",\n",
-    "        \"value\": \"http://<proxy_host>:<port>\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"http_proxy\",\n",
-    "        \"value\": \"http://<proxy_host>:<port>\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"https_proxy\",\n",
-    "        \"value\": \"http://<proxy_host>:<port>\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"no_proxy\",\n",
-    "        \"value\": \"<no_proxy_IPs_list>\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"NO_PROXY\",\n",
-    "        \"value\": \"<no_proxy_IPs_list>\"\n",
-    "    }\n",
+    "    # {\n",
+    "    #     \"name\": \"HTTP_PROXY\",\n",
+    "    #     \"value\": \"http://<proxy_host>:<port>\"\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     \"name\": \"HTTPS_PROXY\",\n",
+    "    #     \"value\": \"http://<proxy_host>:<port>\"\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     \"name\": \"http_proxy\",\n",
+    "    #     \"value\": \"http://<proxy_host>:<port>\"\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     \"name\": \"https_proxy\",\n",
+    "    #     \"value\": \"http://<proxy_host>:<port>\"\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     \"name\": \"no_proxy\",\n",
+    "    #     \"value\": \"<no_proxy_IPs_list>\"\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     \"name\": \"NO_PROXY\",\n",
+    "    #     \"value\": \"<no_proxy_IPs_list>\"\n",
+    "    # }\n",
     "]"
    ]
   },
