demos: Read namespace from file
In some case the namespace name does not match the username.

Read the namespace name from file instead:
/var/run/secrets/kubernetes.io/serviceaccount/namespace

Signed-off-by: Dimitris Poulopoulos <dimitris.poulopoulos@hpe.com>

--- a/demos/rag-demos/question-answering/03.document-prediction.ipynb
+++ b/demos/rag-demos/question-answering/03.document-prediction.ipynb
@@ -138,7 +138,7 @@
    "outputs": [],
    "source": [
     "DOMAIN_NAME = \"svc.cluster.local\"\n",
-    "NAMESPACE = username\n",
+    "NAMESPACE = open(\"/var/run/secrets/kubernetes.io/serviceaccount/namespace\", \"r\").read()\n",
     "DEPLOYMENT_NAME = \"vectorstore\"\n",
     "MODEL_NAME = DEPLOYMENT_NAME\n",
     "SVC = f'{DEPLOYMENT_NAME}-predictor.{NAMESPACE}.{DOMAIN_NAME}'\n",
