--- a/demos/rag-demos/question-answering/05.question-answering.ipynb
+++ b/demos/rag-demos/question-answering/05.question-answering.ipynb
@@ -126,7 +126,7 @@
    "outputs": [],
    "source": [
     "DOMAIN_NAME = \"svc.cluster.local\"  # change this to your domain for external access\n",
-    "NAMESPACE = username\n",
+    "NAMESPACE = open(\"/var/run/secrets/kubernetes.io/serviceaccount/namespace\", \"r\").read()\n",
     "DEPLOYMENT_NAME = \"llm\"\n",
     "MODEL_NAME = DEPLOYMENT_NAME\n",
     "SVC = f'{DEPLOYMENT_NAME}-transformer.{NAMESPACE}.{DOMAIN_NAME}'\n",
