--- a/demos/bike-sharing/02.bike-sharing-prediction.ipynb
+++ b/demos/bike-sharing/02.bike-sharing-prediction.ipynb
@@ -94,7 +94,7 @@
    "outputs": [],
    "source": [
     "DOMAIN_NAME = \"svc.cluster.local\"  # change this to your domain for external access\n",
-    "NAMESPACE = username\n",
+    "NAMESPACE = open(\"/var/run/secrets/kubernetes.io/serviceaccount/namespace\", \"r\").read()\n",
     "DEPLOYMENT_NAME = \"bike-sharing\"\n",
     "MODEL_NAME = DEPLOYMENT_NAME\n",
     "SVC = f\"{DEPLOYMENT_NAME}-predictor.{NAMESPACE}.{DOMAIN_NAME}\"\n",
