Updated MLflow variables to match

--- a/demos/smart-retail/04.model_training.ipynb
+++ b/demos/smart-retail/04.model_training.ipynb
@@ -1113,8 +1113,8 @@
    "outputs": [],
    "source": [
     "# Experiment variables for MLflow\n",
-    "experiment_name = \"smart-retail\"\n",
-    "model_name = \"retail-demo\"\n",
+    "experiment_name = \"retail-experiment\"\n",
+    "model_name = \"produce-detection\"\n",
     "artifact_path = \"model\""
    ]
   },
