resolved parquet rollback bug

--- a/demos/smart-retail/01.exploring_data_with_spark.ipynb
+++ b/demos/smart-retail/01.exploring_data_with_spark.ipynb
@@ -720,6 +720,10 @@
    "outputs": [],
    "source": [
     "from delta.tables import DeltaTable\n",
+    "\n",
+    "#Disable Vectorized Reader to ensure data types remain consistent\n",
+    "spark.conf.set(\"spark.sql.parquet.enableVectorizedReader\",\"false\")\n",
+    "\n",
     "# Set the parameters\n",
     "country = \"czech\"\n",
     "delta_path = delta_root + country\n",
