add profile-namespace variable

--- a/Data-Science/MLflow/bike-sharing-prediction.ipynb
+++ b/Data-Science/MLflow/bike-sharing-prediction.ipynb
@@ -17,6 +17,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set the profile namespace below\n",
+    "PROFILE_NAMESPACE = \"<profile-namespace>\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import yaml\n",
     "import json\n",
     "\n",
@@ -41,7 +51,7 @@
     "json_data = json.dumps(yaml_data)\n",
     "data = json.loads(json_data)\n",
     "\n",
-    "data[\"metadata\"][\"namespace\"] = os.environ['USER']\n",
+    "data[\"metadata\"][\"namespace\"] = PROFILE_NAMESPACE\n",
     "data[\"metadata\"][\"name\"] = model_name\n",
     "data['spec']['predictor']['sklearn']['storageUri'] = storage_uri\n",
     "\n",
@@ -73,7 +83,7 @@
     "import requests\n",
     "\n",
     "DOMAIN_NAME = \"svc.cluster.local\" # change this to your domain for external access \n",
-    "NAMESPACE = os.environ['USER']\n",
+    "NAMESPACE = PROFILE_NAMESPACE\n",
     "DEPLOYMENT_NAME = model_name\n",
     "MODEL_NAME = \"model\"\n",
     "SVC = f'{DEPLOYMENT_NAME}-predictor.{NAMESPACE}.{DOMAIN_NAME}'\n",
@@ -190,4 +200,3 @@
  "nbformat": 4,
  "nbformat_minor": 4
 }
-
