get namespace from cm

--- a/Data-Science/MLflow/bike-sharing-prediction.ipynb
+++ b/Data-Science/MLflow/bike-sharing-prediction.ipynb
@@ -17,8 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the profile namespace below\n",
-    "PROFILE_NAMESPACE = \"<profile-namespace>\""
+    "# Set profile namespace below\n",
+    "PROFILE_NAMESPACE = !kubectl get configmap user-info-cm -o jsonpath='{.metadata.namespace}'\n",
+    "namespace = PROFILE_NAMESPACE[0]"
    ]
   },
   {
@@ -51,7 +52,7 @@
     "json_data = json.dumps(yaml_data)\n",
     "data = json.loads(json_data)\n",
     "\n",
-    "data[\"metadata\"][\"namespace\"] = PROFILE_NAMESPACE\n",
+    "data[\"metadata\"][\"namespace\"] = namespace\n",
     "data[\"metadata\"][\"name\"] = model_name\n",
     "data['spec']['predictor']['sklearn']['storageUri'] = storage_uri\n",
     "\n",
@@ -83,7 +84,7 @@
     "import requests\n",
     "\n",
     "DOMAIN_NAME = \"svc.cluster.local\" # change this to your domain for external access \n",
-    "NAMESPACE = PROFILE_NAMESPACE\n",
+    "NAMESPACE = namespace\n",
     "DEPLOYMENT_NAME = model_name\n",
     "MODEL_NAME = \"model\"\n",
     "SVC = f'{DEPLOYMENT_NAME}-predictor.{NAMESPACE}.{DOMAIN_NAME}'\n",
